commonscriptfunctions conversion complete. Expiring  html msg moved.

--- a/html/EmailExpiring.html
+++ b/html/EmailExpiring.html
@@ -1,7 +1,4 @@
-<!-- Formatted with https://jsonformatter.org/html-viewer -->
-<html>
-<head>
-<title>Welcome to CUSD</title>
+<html><head><title>CUSD Account Expiring</title>
 <style TYPE="TEXT/CSS">
 <!--
 body {{
