--- a/html/EmailExpiring.html
+++ b/html/EmailExpiring.html
@@ -1,71 +1,16 @@
-<html><head><title>CUSD Account Expiring</title>
-<style TYPE="TEXT/CSS">
-<!--
-body {{
-font-family: Helvetica, Arial, Sans-Serif;
-}}
-p{{
-font-size:14px;
-margin-top:7px;
-margin-bottom:3px;
-margin-left:0px;
-margin-right:0px;
-}}
-h3,h4,h5{{
-margin-top:10px;
-margin-bottom:0px;
-margin-left:0px;
-margin-right:0px;
-}}
-.item {{
-text-indent: 1em;
-}}
--->
-</style>
-</head>
-<body>
-<h3>
-<strong>Hello {0},</strong>
-</h3>
+<h3> <strong>Hello {0},</strong> </h3>
 <p>
-Your Chico Unified accounts
-
-<ui>
-<li>{1} (Office365)</li>
-<li>{2} (Gsuite)</li>
-</ui>
-<br>are scheduled to be disabled on
-<b>{3}</b>.
-
+ Your Chico Unified accounts
+ <ui>
+  <li>{1} (Office365)</li>
+  <li>{2} (Gsuite)</li>
+ </ui>
+ <br>are scheduled to be disabled on
+ <b>{3}</b>.
 </p>
 <p>
-To save your Google Suite files follow this guide:
-<a href="https://goo.gl/SlCQ1D">Google File Transfer Instructions</a>
+ To save your Google Suite files follow this guide:
+ <a href="https://goo.gl/SlCQ1D">Google File Transfer Instructions</a>
 </p>
 <p>To request an account extension please reach out to your site office manager or department lead.
 </p>
-<br>
-Thank You,
-<br>
-
-<table>
-<tbody>
-<tr>
-<td>
-<a href="http://www.chicousd.org/" target="_blank"> <img src="https://schoolmanager.s3.amazonaws.com/uploads/pictures/caef8bc4c5d04073941cd141f1028201.png" alt="CUSD Logo" height="60" width="60"> </a> </td>
-</td>
-<td>
-<h5>
-Chico Unified School District
-<br>
-Information Services
-<br>
- <a href="http://www.chicousd.org/" target="_blank">www.chicousd.org</a>
-</h5>
-</td>
-</tr>
-</tbody>
-</table>
-
-</body>
-</html>
