--- a/html/emailSig.html
+++ b/html/emailSig.html
@@ -1,14 +1,16 @@
 <br>
 <table style="border: 0px;">
-<tr>
-<td>
-<a href="http://www.chicousd.org/" target="_blank">
-<img src="https://schoolmanager.s3.amazonaws.com/uploads/pictures/caef8bc4c5d04073941cd141f1028201.png" alt="CUSD Logo" height="60" width="60">
-</a>
-</td>
-<td>
-Chico Unified School District<br>
-Information Services<br>
-<a href="http://www.chicousd.org/" target="_blank">www.chicousd.org</a></td>
-</tr>
+ <tr>
+  <td>
+   <a href="http://www.chicousd.org/" target="_blank">
+    <img src="https://schoolmanager.s3.amazonaws.com/uploads/pictures/caef8bc4c5d04073941cd141f1028201.png"
+     alt="CUSD Logo" height="60" width="60">
+   </a>
+  </td>
+  <td>
+   Chico Unified School District<br>
+   Information Services<br>
+   <a href="http://www.chicousd.org/" target="_blank">www.chicousd.org</a>
+  </td>
+ </tr>
 </table>
