removed google takeout instructions link from expire email

--- a/html/EmailExpiring.html
+++ b/html/EmailExpiring.html
@@ -8,9 +8,5 @@
  <br>are scheduled to be disabled on
  <b>{3}</b>.
 </p>
-<p>
- To save your Google Suite files follow this guide:
- <a href="https://goo.gl/SlCQ1D">Google File Transfer Instructions</a>
-</p>
-<p>To request an account extension please reach out to your site office manager or department lead.
+<p>To request an account extension please reach out to your site Office Manager or Department Head.
 </p>
